[gd_scene load_steps=8 format=3 uid="uid://bkp8a5oari7i2"]

[ext_resource type="Texture2D" uid="uid://elaqasq1q6th" path="res://Assets/bulletplayer.png" id="1_v7oki"]
[ext_resource type="Script" uid="uid://buagmvmhb5nv4" path="res://Scripts/bullet.gd" id="1_v8qja"]
[ext_resource type="Texture2D" uid="uid://bglvrktjfdw4x" path="res://Assets/blood.png" id="3_t4vbm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v8qja"]
radius = 21.0238

[sub_resource type="Curve" id="Curve_t4vbm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2b2rl"]
curve = SubResource("Curve_t4vbm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v8qja"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 1.25
color = Color(1, 0, 0, 1)
alpha_curve = SubResource("CurveTexture_2b2rl")

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource("1_v8qja")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v8qja")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("1_v7oki")

[node name="Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
texture = ExtResource("3_t4vbm")
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_v8qja")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Particles" to="." method="_on_particles_finished"]
